I wasn't really 100% happy with the prior implementation, so I cleaned things up a bit, AMEC-1688